# bazel-examples

./: .bazelignore  .bazelrc  .bazelversion  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  deps.bzl
cfg-bazel/bazelrc/: README.md  gitlab-runner.aws.rc
cfg-bazel/cpu/: BUILD
cfg-bazel/py/requirements/: BUILD  README.txt  requirements-3-10.in  requirements-lock-3-10.txt
cfg-bazel/toolchains/arm_none_eabi/: BUILD
cfg-bazel/toolchains/x86_64-aarch64-none-linux-gnu/: BUILD  BUILD.repo  cc_toolchain_config.bzl  libX_so.patch  x86_64_aarch64_none_linux_gnu_setup.bzl
examples_bazel/: README.md
examples_bazel/cpp/: BUILD  README.md  hello-greet.cc
examples_bazel/cpp_foreign/: BUILD
examples_bazel/cpp_sanitizers/: BUILD  README.md  main_missing_free.cc
examples_bazel/cpp_stm32/: BUILD  README.md  functions.c  functions.h  main.c
examples_bazel/grpc_cpp/: BUILD  README.md  greeter_client.cc  greeter_server.cc
examples_bazel/grpc_go/: README.md
examples_bazel/grpc_go/client/: BUILD.bazel
examples_bazel/grpc_go/server/: BUILD.bazel  main.go
examples_bazel/grpc_py/: BUILD.bazel  client.py  resources.py  server.py
examples_bazel/protos/: BUILD  README.md  helloworld.proto  routeguide.proto
examples_bazel/py/: BUILD  greeter.py  hello_world.py
examples_bazel/pybind11/: BUILD  README.md  example_test.py
